[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
indoc = "2.0.4"
pathfinding = "4.6.0"
imageproc = "0.23.0"
rusttype = "0.9.3"
image = "0.24.7"
rayon = "1.8.0"
lazy_static = "1.4.0"
